--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,12 @@ cache:
 setup_git:
   script:
     - git remote add -f $GITHUB_UPSTREAM $GITHUB_URL || /bin/true
+    - git config user.email "GitLabCI"
+    - git config user.name "GitLabCI"
 
 push_upstream_github:
   script:
     - env
-    - git checkout master
     - git push $GITHUB_UPSTREAM master
 
 build_dist:
@@ -34,5 +35,5 @@ update_gh_pages:
     - git init
     - git checkout --orphan gh-pages
     - git add -f .
-    - git commit -m'Github pages' --author=GitlabCI
+    - git commit -m'Github pages'
     - git push $GITHUB_UPSTREAM gh-pages
